<resources>
    <string name="app_name">Sudoku</string>
    <string name="main_menu">Home</string>
    <string name="timer_placeholder">00:00</string>
    <string name="erase">Erase</string>
    <string name="note">Note</string>
    <string name="hint">Hint</string>
    <string name="mistake_placeholder">Mistake: 0/3</string>
    <string name="medium">Medium</string>
    <string name="level_placeholder">Level 123</string>
    <string name="daily">Daily</string>
    <string name="statistic">Statistics</string>
    <string name="sudoku">SUDOKU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="continue_placeholder">00:01 - Very Heard</string>
    <string name="previous_month">Previous month</string>
    <string name="month_placeholder">March</string>
    <string name="daily_challenge">Daily challenge</string>
    <string name="back">Back</string>
    <string name="crown">Crown</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="difficulty">Difficulty</string>
    <string name="nightmare">Nightmare</string>
    <string name="match">Match</string>
    <string name="match_placeholder">1</string>
    <string name="timer">Timer</string>
    <string name="best_time">Best Time</string>
    <string name="mistake">Mistake</string>
    <string name="save">Save</string>
    <string name="easy">Easy</string>
    <string name="heard">Heard</string>
    <string name="expert">Expert</string>
    <string name="restart">Restart</string>
    <string name="day_placeholder">1</string>
    <string name="cup">Cup</string>
    <string name="coming">Coming</string>
    <string name="play">Play</string>
    <string name="games">Games</string>
    <string name="game_started">Game Started</string>
    <string name="num_placeholder">7</string>
    <string name="game_own">Game Own</string>
    <string name="win_rate">Win rate</string>
    <string name="percent_placeholder">100%</string>
    <string name="win_with_no_mistake">Win with no mistake</string>
    <string name="time">Time</string>
    <string name="time_placeholder">07:32</string>
    <string name="average_time">Average Time</string>
    <string name="streaks">Streaks</string>
    <string name="current_win_streak">Current Win Streak</string>
    <string name="longest_win_streak">Longest Win Streak</string>
    <string name="game_over">Game Over</string>
    <string name="you_lost">You lost the game because you made 3 mistakes</string>
    <string name="restart_game">Restart game</string>
    <string name="pause">Pause</string>
    <string name="pause_mistake_placeholder">0/3</string>
    <string name="undo">Undo</string>
    <string name="resume_game">Resume game</string>
    <string name="pause_restart">RESTART</string>
    <string name="flags">flags</string>
    <string name="rays">rays</string>
    <string name="cancel">Cancel</string>
    <string name="by">by</string>
    <string name="app_author">Sougata Talukdar</string>
    <string name="settings">Settings</string>
    <string name="how_to_play">How to Play</string>
    <string name="enter_into_the_option">Enter into the option</string>
    <string name="guide">guide</string>
    <string name="history">History</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="enable_edit">Enable edit</string>
    <string name="sound">Sound</string>
    <string name="mistake_limit">Mistake Limit</string>
    <string name="vibrate">Vibrate</string>
    <string name="auto_remove_notes">Auto Remove Notes</string>
    <string name="highlight_same_numbers">Highlight Same Numbers</string>
    <string name="region_highlight">Region Highlight</string>
    <string name="ok">OK</string>
    <string name="mistakes_3">3 Mistakes</string>
    <string name="mistakes_5">5 Mistakes</string>
    <string name="mistakes_10">10 Mistakes</string>
    <string name="advance_note">Advance Note</string>
    <string name="use_hints_when_you_get_stuck">Use hints when you get stuck</string>
    <string name="no_hint_toast_message">No hints left</string>
    <string name="no_advance_note_toast_message">Complete more levels to get more advance notes</string>
    <string name="strategies">Strategies</string>
    <string name="learn">Learn</string>
    <string name="year_placeholder">2025</string>
    <string name="share_note">Play with Friends\nSolve the same Sudoku puzzle together</string>
    <string name="keep_your_mind_sharp">Keep Your Mind Sharp</string>
    <string name="share">Share</string>
    <string name="share_message">Can you solve this? Check out your skill here\nhttps://github.com/Sou-gata/sudoku_android_game/releases/download/V_1.1.2/Sudoku_V_1.1.2.apk\nChallenge your brain now</string>
    <string name="event_url">https://raw.githubusercontent.com/Sou-gata/sudoku_android_game/refs/heads/main/event/event.json</string>
    <string name="coming_soon">Coming soon</string>
    <string name="awards">Awards</string>
    <string name="event">Event</string>
    <string name="event_timer_placeholder">11 d 10 h 30 m</string>
    <string name="highlight_notes">Highlight Notes</string>
    <string name="no_event_medal">You have no medal yet.\nTake part in events and get medals.</string>
    <string name="medal">Medal</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="match_type">Match type</string>
    <string name="no_record_found">No record found</string>
    <string-array name="pause_popup_titles">
        <item>@string/hint</item>
        <item>@string/erase</item>
        <item>@string/note</item>
        <item>@string/advance_note</item>
        <item>@string/statistic</item>
        <item>@string/dark_mode</item>
        <item>@string/event</item>
    </string-array>
    <string-array name="pause_popup_description">
        <item>@string/use_hints_when_you_get_stuck</item>
        <item>Made a mistake? Erase it!</item>
        <item>Want to add a note? Turn it on!</item>
        <item>Add notes automatically.</item>
        <item>Track your progress</item>
        <item>Add more fun to your game with\ndark mode</item>
        <item>Participate in events to win\nspecial medals!</item>
    </string-array>
    <string-array name="match_types">
        <item>All</item>
        <item>Classic</item>
        <item>@string/daily</item>
        <item>@string/event</item>
        <item>Complete</item>
        <item>Incomplete</item>
    </string-array>
</resources>