<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/popup_window_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="35dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="#888888"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_pause_popup_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/time_placeholder"
                    android:textColor="@color/black"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mistake"
                    android:textColor="#888888"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_pause_popup_mistakes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/pause_mistake_placeholder"
                    android:textColor="@color/black"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty"
                    android:textColor="#888888"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_pause_popup_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/easy"
                    android:textColor="@color/black"
                    android:textSize="19sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/tips_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <ImageView
                android:id="@+id/iv_pause_popup_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/tip_icon_bg"
                android:contentDescription="@string/undo"
                android:src="@drawable/ic_bulb"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_pause_popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hint"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pause_popup_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#888888"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/use_hints_when_you_get_stuck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pause_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg_solid"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_resume"
                app:tint="@color/fill_btn_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume_game"
                android:textAlignment="center"
                android:textColor="@color/fill_btn_text"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_pase_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/pause_restart"
            android:textColor="#888888"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>