<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SplashScreenActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lv_splash_screen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="1"
        app:lottie_autoPlay="true"
        app:lottie_cacheComposition="true"
        app:lottie_speed="0.4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sudoku"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/by"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_author"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        android:visibility="invisible" />

</LinearLayout>