<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.EventActivity">

    <ScrollView
        android:id="@+id/sv_event"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp">

        <FrameLayout
            android:id="@+id/fl_lvl_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:layout_marginTop="50dp"
            android:paddingBottom="65dp">

            <ImageView
                android:id="@+id/iv_event_bg"
                android:layout_width="match_parent"
                android:layout_height="3300dp" />

        </FrameLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_awards_back_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/black"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_event_timer"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="@drawable/event_timer_bg"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/event_timer_placeholder"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_event_play_container"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        android:background="#FFFFECEE"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:paddingVertical="5dp"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btn_event_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/event_button_bg"
            android:textColor="#FFCE6161"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>
</FrameLayout>
